Changed color of font to white from register and login views. Fixed the img and txt overlap with responsiveness in the login view.

--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -4,39 +4,32 @@ body {
   background-color: black;
 }
 
-#usernameLbl, #passwordLbl{
+#usernameLbl, #passwordLbl {
   font-family: Edelsans, Avenir, sans-serif;
   font-size: 1.5em;
-  color: #201419;
+  color: white;
   display: block;
   margin-left: 25%;
 }
 
-#loginHeader{
-  display: inline;
-  /*background-color: rgba(81, 81, 81, 0.67);*/
-  border-radius: 50px;
-  /*color: aquamarine;*/
-  font-family: monospace;
-  font-weight: bold;
-  font-size: 6.3em;
-  padding: 10px;
-/*new additions*/
+#loginHeader {
   position: absolute;
-  margin-left: 35.3%;
-  margin-top: 9%;
+  font-size: 7vw;
+  font-weight: bold;
+  top: 13%;
+  right: 36%;
 }
 
- /*new additions*/
-#loginImage{
-  width: 28%;
-  margin-left: 36%;
+/*new additions*/
+#loginImage {
+  width: 25%;
+  margin: 0 auto;
+  display: block;
 }
 
-
-#username, #password{
+#password {
   background-color: #00b4ff;
-  color: #515151;
+  color: black;
   font-size: 1.3em;
   font-weight: bold;
   border-radius: 8px;
@@ -45,3 +38,18 @@ body {
   margin: 0 auto;
 }
 
+#username {
+  background-color: #515151;
+  color: #00b4ff;
+  font-size: 1.3em;
+  font-weight: bold;
+  border-radius: 8px;
+  width: 50%;
+  display: block;
+  margin: 0 auto;
+}
+
+.img-Container {
+  position: relative;
+  width: 100%;
+}
